Solved overflow isue with Politicas text by expanding the container div, also added buttons and its styles for sections navigation on about component, finally added smooth scrolling behaviour to buttons on about component

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -210,17 +210,42 @@ p {
 
 /* INFO CONTAINER */
 
+#sections-navigation {
+  left: 0;
+  top: 5rem;
+  height: 4rem;
+  background-color: #fff;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: flex-start;
+
+  align-items: center;
+  padding: 0 5rem;
+  box-sizing: border-box;
+}
+
+#sections-navigation > button {
+  display: block;
+  border: none;
+  font-size: 2rem;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.3);
+  margin: 0 1rem;
+  border-radius: 5rem;
+  width: 12rem;
+}
+
 .info-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   color: #fff;
-  align-items: center;
+
   margin: 1rem 0;
   justify-content: center;
   text-align: center;
-  padding: 0 4rem;
-  z-index: 1;
+  padding: 0 10rem;
 }
 
 #Mision {
@@ -247,6 +272,15 @@ p {
   background-image: linear-gradient(to right bottom, #2021255e, #1f2025b2),
     url(../images/About/politicas.jpg);
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  height: 130vh;
+  color: #fff;
+
+  margin: 1rem 0;
+
+  text-align: center;
+  padding: 12rem 10rem;
 }
 
 .page a {
@@ -254,7 +288,7 @@ p {
 }
 
 .info-container--title {
-  font-size: 4rem;
+  font-size: 3rem;
   line-height: 1.2;
   margin: 1rem;
 }
@@ -277,6 +311,7 @@ p {
   font-weight: 500;
   text-align: left;
   font-size: 1.6rem;
+  height: 20rem;
 }
 
 .ong-data-Valores > span {
@@ -287,9 +322,6 @@ p {
   padding: 1rem;
   margin: 1rem;
   align-items: center;
-}
-
-.project-card {
 }
 
 /*
